# macs

./: .api_key  .dockerignore  .env  .env.flyway  .gitignore  .last_task_id  .pre-commit-config.yaml  Dockerfile  Dockerfile.bak.1761321436  Dockerfile.bak.1761322462  GNUmakefile  Makefile  Makefile.bak.1761381689  Makefile.rag  README.md  agentctl.spec  alembic.ini  api.env  apply_queue_artifacts_patch.sh  bandit-20251024-233929.jsonl  bandit-20251024-233942.csv  diag.sh  docker-compose.artifacts.yml  docker-compose.local.hardening.yml  docker-compose.noconflict.yml  docker-compose.ollama.nopublish.yml  docker-compose.override.yml  docker-compose.override.yml.20251024230215.bak  docker-compose.override.yml.20251024230406.bak  docker-compose.override.yml.bak.1761390719  docker-compose.yml  docker-compose.yml.bak.1761319657  docker-compose.yml.bak.1761324632  docker-compose.yml.bak.1761421689  duel.force.json  duel.java.retry.json  duel.java.smoke.json  duel.log.test.json  duel.maven.fallback.json  duel.real.json  (+15 more)
.backup_20251025_203415/: docker-compose.override.yml  docker-compose.yml
.backup_20251025_211037/: main.py
.backup_20251025_212408/: docker-compose.yml
.patch_backups/: main.py.20251025-001202.bak  queue.py.20251025-001202.bak  queue.py.20251025-001410.pre-clean.bak
app/: api.py  api.py.bak.1761358260  api.py.bak.1761394378  api.py.bak.1761395721  api.py.bak.1761396140  api.py.bak.1761397423  api.py.bak.20251024214456  artifact_api.py  artifacts.py  asgi.py  bandit.py  bandit_api.py.bak.1761395930  bandit_hook.py  bandit_policy.py  bandit_service.py  db.py  (+42 more)
(+304 files in other folders)
